@@ -72,7 +72,11 @@ static const R_CallMethodDef CallEntries[] = {
 #define EXTDEF(name, n)  {#name, (DL_FUNC) &name, n}
 
 static const R_ExternalMethodDef ExtEntries[] = {
+#ifdef Win32
+    EXTDEF(download, 6),
+#else
     EXTDEF(download, 5),
+#endif
     EXTDEF(unzip, 7),
     EXTDEF(Rprof, 8),
     EXTDEF(Rprofmem, 3),
